--- a/app/templates/feedlot/pens/map_view.html
+++ b/app/templates/feedlot/pens/map_view.html
@@ -75,7 +75,7 @@ function initializeGrid() {
                     cell.innerHTML = `
                         <a href="${penUrl}" 
                            class="text-center p-2 w-full h-full flex flex-col items-center justify-center hover:bg-teal hover:bg-opacity-20 rounded transition">
-                            <div class="font-bold text-teal">Pen ${pen.pen_number}</div>
+                            <div class="font-bold text-teal">${pen.pen_number}</div>
                         </a>
                     `;
                     cell.classList.add('bg-teal', 'bg-opacity-10');
