--- a/office_app/templates/office/cattle/view.html
+++ b/office_app/templates/office/cattle/view.html
@@ -183,7 +183,7 @@
                     <div class="flex items-center space-x-2">
                         <p class="text-lg font-semibold text-gray-900">
                             {% if pen %}
-                            Pen {{ pen.pen_number }}
+                            {{ pen.pen_number }}
                             {% else %}
                             <span class="text-gray-400">Not assigned</span>
                             {% endif %}
